--- a/ddns-hetzner.csproj
+++ b/ddns-hetzner.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="ErrorOr" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
