--- a/ddns-hetzner.csproj
+++ b/ddns-hetzner.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="ErrorOr" Version="2.0.1" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-rc.1.25451.107" />
   </ItemGroup>
 
 </Project>
