--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Move artifacts to root
         run: |
-          find ./artifacts -name "*.tar.gz" -o -name "*.zip" | xargs -I {} mv {} .
+          find ./artifacts -type f \( -name "*.tar.gz" -o -name "*.zip" \) -exec mv {} . \;
           ls -la *.tar.gz *.zip
 
       - name: Extract tag name
